infra/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hostile-tweets
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hostile-tweets
  template:
    metadata:
      labels:
        app: hostile-tweets
    spec:
      containers:
        - name: api
          image: docker.io/0533orel/hostile-tweets-ex:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
