infra/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hostile-tweets-svc
spec:
  selector:
    app: hostile-tweets
  ports:
    - name: http
      port: 8000
      targetPort: 8000
  type: ClusterIP
